[package]
name = "fixity"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[features]
default = [
  "borsh",
  # Enabling more costly debug checks for all initial prototypes.
  # Benchmarking should be run without default features for this
  # reason.
  "debug_checks",
]
# Whether or not to enable moderately costly runtime safety checks of
# store content, tree structure integrity checks, etc.
debug_checks = []
# An eventual series of alternate serialize for performance options.
#
# WARN: All of the canonical json libraries i've seen so far are in
# various states of abandon. This lib should not be trusted until we
# can fork and establish some trust.
deser_json = ["serde", "cjson", "serde_json"]
# deser_cbor = ["serde", "serde_cbor"]
deser_borsh = ["borsh"]
# An eventual cbor comparison encoding.

[dependencies]
borsh = { version = "0.7", optional = true }
#serde_cbor = { version = "0.11", optional = true }
# feature: serialize_json
cjson= { version = "0.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
# normal, non-optional deps.
fbuzhash = { path = "./fbuzhash" }
log = "0.4"
thiserror = "1.0.21"
blake3 = "0.3"
fastcdc = "1.0"
multibase = "0.8"
async-trait = "0.1"
speedy = "0.7.0"
tokio = { version = "0.2.22", features = ["macros", "fs", "io-util"] }
structopt = { version = "0.3", optional = true }
async-recursion = "0.3.1"
lru = "0.6.0"

[dev-dependencies]
env_logger = "0.7"
rand = "0.7.3"
replace_with = "0.1.7"

[workspace]
members = [
  "fixi_cli",
  "fixi_web",
  "fbuzhash",
]

