[package]
name = "fbuzhash"
version = "0.0.1"
description = "A buzhash rolling hash function"
readme = "README.md"
authors = [
  "https://github.com/silvasur/buzhash",
  "Lee Olayvar <leeola@fastmail.com>",
]
edition = "2018"
license-file = "LICENSE"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.7"
