[package]
name = "fixi_cli"
version = "0.0.1"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[[bin]]
name = "fixi"
path = "src/bin/fixi.rs"

[features]
default = []

[dependencies]
fixity = { path = "..", features = ["structopt"] }
structopt = "0.3"
env_logger = "0.7"
tokio = { version = "1.18.5", features = ["rt-multi-thread", "macros", "io-std"] }
thiserror = "1.0.21"
log = "0.4.11"
