[package]
name = "fixity_store"
version = "0.0.1"
edition = "2021"

[dependencies]
fixity_types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
multihash = "0.16.1"
rkyv = "0.7"

[dev-dependencies]
tokio = { version = "1.17", features = ["test-util", "macros"] }
rstest = "0.12"
