[package]
name = "fixity_store"
version = "0.0.1"
edition = "2021"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
license-file = "LICENSE"

[features]
default = ["rkyv", "json"]
# Provide various test helpers or test focused implementations.
test = []
json = ["serde_json", "serde"]

[dependencies]
fixity_types = { path = "../types" }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
multihash = "0.16"
multibase = "0.9"
# Feature: rkyv
rkyv = { version = "0.7", optional = true } 
# Feature: json
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true } 
serde-big-array = "0.4.1"

[dev-dependencies]
tokio = { version = "1.17", features = ["test-util", "macros"] }
rstest = "0.12"
